--- a/index.html
+++ b/index.html
@@ -734,6 +734,75 @@
      MISC
      ============================================= */
   .spacer { height: 24px; }
+
+  /* =============================================
+     iOS INSTALL BANNER
+     ============================================= */
+  .ios-install-banner {
+    position: fixed;
+    top: 60px;
+    left: 16px;
+    right: 16px;
+    background: var(--surface);
+    border: 1px solid var(--accent);
+    border-radius: 12px;
+    padding: 12px 16px;
+    box-shadow: var(--shadow);
+    z-index: 99;
+    display: none;
+    animation: slideDown 0.3s ease;
+  }
+
+  .ios-install-banner.show {
+    display: flex;
+    align-items: flex-start;
+    gap: 10px;
+  }
+
+  @keyframes slideDown {
+    from { transform: translateY(-20px); opacity: 0; }
+    to { transform: translateY(0); opacity: 1; }
+  }
+
+  .ios-banner-icon {
+    font-size: 20px;
+    flex-shrink: 0;
+    line-height: 1;
+  }
+
+  .ios-banner-text {
+    flex: 1;
+    font-family: 'Space Mono', monospace;
+    font-size: 11px;
+    color: var(--text);
+    line-height: 1.4;
+    letter-spacing: 0.2px;
+  }
+
+  .ios-banner-text strong {
+    font-weight: 700;
+    color: var(--accent);
+  }
+
+  .ios-banner-close {
+    background: none;
+    border: none;
+    color: var(--muted);
+    font-size: 18px;
+    cursor: pointer;
+    padding: 0;
+    width: 24px;
+    height: 24px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-shrink: 0;
+    transition: color 0.2s;
+  }
+
+  .ios-banner-close:hover {
+    color: var(--text);
+  }
 </style>
 </head>
 <body>
@@ -767,6 +836,18 @@
     </button>
     <button class="sound-btn" id="soundBtn" onclick="enableSound()">🔇 SND</button>
   </div>
+</div>
+
+<!-- =============================================
+     iOS INSTALL BANNER
+     ============================================= -->
+<div class="ios-install-banner" id="iosBanner">
+  <span class="ios-banner-icon">💡</span>
+  <div class="ios-banner-text">
+    <strong>Tip:</strong> Add to home screen for faster access<br>
+    (Tap Share → Add to Home Screen)
+  </div>
+  <button class="ios-banner-close" onclick="dismissIosBanner()">✕</button>
 </div>
 
 <!-- =============================================
@@ -1117,6 +1198,7 @@ function renderResult(isbn, result) {
   const dotClass = meetsThreshold ? 'dot-green' : 'dot-red';
 
   const actionHtml = meetsThreshold ? `
+    ${renderConditionPicker()}
     <a id="cartBtn" class="cart-btn"
        href="${buildCartUrl(isbn, selectedCondition)}"
        target="_blank" rel="noopener noreferrer">
@@ -1301,6 +1383,49 @@ function closeCamera() {
     try { codeReader.reset(); } catch(_) {}
   }
   scanInput.focus();
+}
+
+// =============================================
+// iOS INSTALL BANNER
+// =============================================
+const LS_IOS_BANNER_DISMISSED = 'scantocash_ios_banner_dismissed_v1';
+
+function isIOS() {
+  return /iPad|iPhone|iPod/.test(navigator.userAgent) && !window.MSStream;
+}
+
+function isStandalone() {
+  return window.navigator.standalone === true || window.matchMedia('(display-mode: standalone)').matches;
+}
+
+function shouldShowIOSBanner() {
+  // Don't show if not iOS
+  if (!isIOS()) return false;
+  
+  // Don't show if already installed (standalone mode)
+  if (isStandalone()) return false;
+  
+  // Don't show if already dismissed
+  try {
+    return !localStorage.getItem(LS_IOS_BANNER_DISMISSED);
+  } catch(_) {
+    return true;
+  }
+}
+
+function dismissIosBanner() {
+  const banner = document.getElementById('iosBanner');
+  banner.classList.remove('show');
+  try {
+    localStorage.setItem(LS_IOS_BANNER_DISMISSED, 'true');
+  } catch(_) {}
+}
+
+// Show banner if appropriate
+if (shouldShowIOSBanner()) {
+  setTimeout(() => {
+    document.getElementById('iosBanner').classList.add('show');
+  }, 2000); // Show after 2 seconds
 }
 
 // =============================================
