--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
 <meta name="description" content="Scan books instantly and check BooksRun buyback prices. Fast, mobile-friendly book scanner for resellers." />
 <title>ScanToCash</title>
 
+<!-- Build: 2024-12-18-v2-CLEAN-NO-CONDITIONS -->
+
 <!-- PWA Meta Tags -->
 <link rel="manifest" href="manifest.json">
 <meta name="theme-color" content="#00a651">
@@ -390,46 +392,6 @@
   @keyframes pulseDot {
     0%, 100% { opacity: 1; }
     50% { opacity: 0.2; }
-  }
-
-  /* Condition picker */
-  .condition-row {
-    display: flex;
-    gap: 6px;
-    margin-bottom: 12px;
-  }
-
-  .cond-btn {
-    flex: 1;
-    background: rgba(255,255,255,0.07);
-    border: 1px solid rgba(255,255,255,0.12);
-    color: rgba(255,255,255,0.55);
-    padding: 7px 2px;
-    border-radius: 10px;
-    font-family: 'Space Mono', monospace;
-    font-size: 10px;
-    letter-spacing: 0.2px;
-    cursor: pointer;
-    transition: all 0.2s;
-    text-align: center;
-  }
-
-  [data-theme="light"] .cond-btn {
-    background: rgba(0,0,0,0.05);
-    border-color: rgba(0,0,0,0.12);
-    color: rgba(0,0,0,0.4);
-  }
-
-  .cond-btn.active {
-    background: rgba(0, 230, 118, 0.2);
-    border-color: var(--accent);
-    color: var(--accent);
-    font-weight: 700;
-  }
-
-  [data-theme="light"] .cond-btn.active {
-    background: rgba(0, 166, 81, 0.12);
-    color: var(--accent);
   }
 
   /* Cart button */
@@ -1106,40 +1068,11 @@ function reScan(isbn) {
 // =============================================
 // CART URL
 // =============================================
-const CONDITIONS = [
-  { key: 'good',     label: 'Good' },
-  { key: 'verygood', label: 'V.Good' },
-  { key: 'likenew',  label: 'Like New' },
-  { key: 'new',      label: 'New' },
-];
-
-let selectedCondition = 'good';
 let currentIsbn = null;
 
-function buildCartUrl(isbn, condition) {
-  return `https://booksrun.com/api/cart/sell/add/${isbn}:${condition}?afk=${AFFILIATE_ID}`;
-}
-
-function selectCondition(key) {
-  selectedCondition = key;
-  document.querySelectorAll('.cond-btn').forEach(btn => {
-    btn.classList.toggle('active', btn.dataset.cond === key);
-  });
-  const cartBtn = document.getElementById('cartBtn');
-  if (cartBtn && currentIsbn) cartBtn.href = buildCartUrl(currentIsbn, key);
-}
-
-function renderConditionPicker() {
-  return `
-    <div class="condition-row">
-      ${CONDITIONS.map(c => `
-        <button
-          class="cond-btn ${c.key === selectedCondition ? 'active' : ''}"
-          data-cond="${c.key}"
-          onclick="selectCondition('${c.key}')"
-        >${c.label}</button>
-      `).join('')}
-    </div>`;
+function buildCartUrl(isbn) {
+  // Always default to 'good' condition
+  return `https://booksrun.com/api/cart/sell/add/${isbn}:good?afk=${AFFILIATE_ID}`;
 }
 
 // =============================================
@@ -1227,9 +1160,8 @@ function renderResult(isbn, result) {
   const dotClass = meetsThreshold ? 'dot-green' : 'dot-red';
 
   const actionHtml = meetsThreshold ? `
-    ${renderConditionPicker()}
     <a id="cartBtn" class="cart-btn"
-       href="${buildCartUrl(isbn, selectedCondition)}"
+       href="${buildCartUrl(isbn)}"
        target="_blank" rel="noopener noreferrer">
       <svg width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2.5">
         <circle cx="9" cy="21" r="1"/><circle cx="20" cy="21" r="1"/>
